@@ -1,3 +1,13 @@
+16-07-19
+
+Minor plugin update. Deployment in preparation for UAT move.
+
+11-07-19
+
+Windows compatibility bug fixing
+
+Excel plugin work, bug fixes for Premium
+
 10-07-19
 
 Work on Windows Deployment - more specifically changes to the libreoffice file conversion (fix certain xls files) and use of the log4j since under Windows Tomcat seems to deal with System.out.printlns in a different way
